--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,8 @@
     "space-before-function-paren": "off",
     "no-multi-assign": "off",
     "max-len": ["error", 120],
+    "guard-for-in":"off",
+    "no-return-assign":"off",
     "no-plusplus": "off",
     "no-unused-expressions": "off",
     "class-methods-use-this": "off",
