--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "max-len": ["error", 120],
     "guard-for-in":"off",
     "no-return-assign":"off",
+    "no-bitwise": "off",
     "no-plusplus": "off",
     "no-unused-expressions": "off",
     "class-methods-use-this": "off",
