--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
         "flow": "flow"
     },
     "dependencies": {
+        "d3-ease": "^1.0.3",
         "d3-selection": "^1.3.0",
+        "d3-transition": "^1.1.1",
         "fusioncharts-smartlabel": "^1.0.2"
     }
 }
