--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "guard-for-in":"off",
     "no-return-assign":"off",
     "no-bitwise": "off",
+    "no-continue": "off",
     "no-plusplus": "off",
     "no-unused-expressions": "off",
     "class-methods-use-this": "off",
