--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,8 @@
     "no-return-assign":"off",
     "no-bitwise": "off",
     "no-continue": "off",
+    "no-loop-func": "off",
+    "no-extra-boolean-cast": "off",
     "no-plusplus": "off",
     "no-unused-expressions": "off",
     "class-methods-use-this": "off",
